Fix layout issues in tablet screen sizes

--- a/app/assets/stylesheets/linear_gauge.scss
+++ b/app/assets/stylesheets/linear_gauge.scss
@@ -19,3 +19,9 @@
     }
   }
 }
+
+@media screen and (min-width: 64em) and (max-width: 79.99em) {
+  .gauge-box {
+    padding: 0 1em;
+  }
+}
